adding image and styling

--- a/index.html
+++ b/index.html
@@ -18,5 +18,8 @@
      </nav>
      <a class="cta" href="mailto:ekagwima745@gmail.com"><button>Contact</button></button></a>
    </header>
+   <div class="text-center">
+    <img src="images/my-photo.jpg" alt="This is me">
+    </div>
   </body>
 </html>
