adding text under image and styling

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
    </header>
    <div class="text-center">
     <img src="images/my-photo.jpg" alt="This is me">
+    <h1>Eston Kagwima</h1>
+    <h3>Moringa prep Student</h3>
+    <h5>Web Developer</h5>
     </div>
   </body>
 </html>
