--- a/index.html
+++ b/index.html
@@ -24,5 +24,9 @@
     <h3>Moringa prep Student</h3>
     <h5>Web Developer</h5>
     </div>
+    <div class="row-1">
+      <p>what is all this</p>
+
+    </div>
   </body>
 </html>
