--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
     <h3>Moringa prep Student</h3>
     <h5>Web Developer</h5>
     </div>
+    <h2>My Projects</h2>
     <div class="row-1">
-      <p>what is all this</p>
+      
 
     </div>
   </body>
