--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
     </div>
     <h2>My Projects</h2>
     <div class="row-1">
+      <ul>
+        <li>My first Website</li>
+        <p>This is a first website i created during my first week of prep at <a href="http://moringaschool.com/">Moringa School</a>. It is a simple website
+           created using HTML and CSS language <a href="https://kagus-code.github.io/my-first-website-/">Check it out</a></p>
+
+      </ul>
       
 
     </div>
