--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <header>
      <nav>
        <ul>
-         <li>Services</li>
+         <li><a href="/index.html">Home</a></li>
          <li>Projects</li>
          <li>About</li>
        </ul>
