--- a/index.html
+++ b/index.html
@@ -29,11 +29,35 @@
       <ul>
         <li>My first Website</li>
         <p>This is a first website i created during my first week of prep at <a href="http://moringaschool.com/">Moringa School</a>. It is a simple website
-           created using HTML and CSS language <a href="https://kagus-code.github.io/my-first-website-/">Check it out</a></p>
-
-      </ul>
+      
       
 
+    </div>
+    <h1>Media Queries</h1>
+    <div class="column">
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc tincidunt
+        vestibulum sollicitudin. Aliquam sit amet ultrices purus, quis pulvinar
+        massa. Sed quis ligula dapibus, gravida lectus sit amet, euismod quam.
+        Integer id nisi sem. Phasellus ac purus et nunc dignissim ultricies quis
+        sed ligula. Proin efficitur nunc eget egestas iaculis. Proin posuere,
+        enim in venenatis gravida, erat metus hendrerit tellus, sit amet
+        sollicitudin magna mauris sit amet ex. In hac habitasse platea dictumst.
+        Fusce porta suscipit felis vitae ornare. Duis fringilla, nunc vitae
+        aliquam lacinia, metus urna tincidunt erat, ut laoreet leo mi ac nibh.
+      </p>
+    </div>
+    <div class="column">
+      <p>
+        In pretium eu sem quis dignissim. In commodo velit eu elit volutpat
+        bibendum. Proin a orci pharetra, pharetra mauris et, tempor odio. Nullam
+        semper magna sit amet augue pretium molestie. Quisque ullamcorper turpis
+        a nisi consectetur, vel consectetur purus lobortis. Pellentesque
+        tristique justo id faucibus rutrum. Donec mi lacus, molestie et posuere
+        eget, lacinia sed turpis. Aenean id sem ligula. Cras venenatis commodo
+        felis a tempor. Duis nec leo facilisis, condimentum odio dictum, rutrum
+        lectus. Nullam vehicula elementum imperdiet.
+      </p>
     </div>
   </body>
 </html>
