--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
    <header>
      <nav>
-       <ul>
+       <ul class="nav_links">
          <li><a href="/index.html">Home</a></li>
          <li>Projects</li>
          <li>About</li>
