adding about me section

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       
 
     </div>
-    <h1>Media Queries</h1>
+    <h1>About Me</h1>
     <div class="column">
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc tincidunt
