--- a/index.html
+++ b/index.html
@@ -29,22 +29,14 @@
       <ul>
         <li>My first Website</li>
         <p>This is a first website i created during my first week of prep at <a href="http://moringaschool.com/">Moringa School</a>. It is a simple website
-      
-      
-
+  </ul>
     </div>
     <h1>About Me</h1>
     <div class="column">
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc tincidunt
-        vestibulum sollicitudin. Aliquam sit amet ultrices purus, quis pulvinar
-        massa. Sed quis ligula dapibus, gravida lectus sit amet, euismod quam.
-        Integer id nisi sem. Phasellus ac purus et nunc dignissim ultricies quis
-        sed ligula. Proin efficitur nunc eget egestas iaculis. Proin posuere,
-        enim in venenatis gravida, erat metus hendrerit tellus, sit amet
-        sollicitudin magna mauris sit amet ex. In hac habitasse platea dictumst.
-        Fusce porta suscipit felis vitae ornare. Duis fringilla, nunc vitae
-        aliquam lacinia, metus urna tincidunt erat, ut laoreet leo mi ac nibh.
+        Eston Kagwima is a Software Developer in The making who is a full time student 
+        at Moringa School. I am also a fourth year student at Kenyatta University
+        awaiting graduation 
       </p>
     </div>
     <div class="column">
@@ -57,6 +49,16 @@
         eget, lacinia sed turpis. Aenean id sem ligula. Cras venenatis commodo
         felis a tempor. Duis nec leo facilisis, condimentum odio dictum, rutrum
         lectus. Nullam vehicula elementum imperdiet.
+      </p>
+    </div>
+    <div class="column">
+      <p>
+        Nullam sit amet ante porttitor, vestibulum quam nec, tincidunt sem.
+        Nulla ac diam in risus porta sollicitudin. Nam pellentesque diam nec
+        arcu vehicula varius. Praesent id ornare magna. Aliquam congue nisl
+        enim, id vulputate lacus faucibus non. Sed ac dignissim dui, quis
+        porttitor augue. Donec velit erat, hendrerit ut tincidunt vel, placerat
+        sit amet risus.
       </p>
     </div>
   </body>
