--- a/index.html
+++ b/index.html
@@ -36,29 +36,29 @@
       <p>
         Eston Kagwima is a Software Developer in The making who is a full time student 
         at Moringa School. I am also a fourth year student at Kenyatta University
-        awaiting graduation 
+        awaiting graduation. I am fascinated by the block-chain technolgy and think that it holds 
+        great promise in solving problems in developing countries like Kenya 
       </p>
     </div>
     <div class="column">
+      <h3>Why i took up programming</h3>
       <p>
-        In pretium eu sem quis dignissim. In commodo velit eu elit volutpat
-        bibendum. Proin a orci pharetra, pharetra mauris et, tempor odio. Nullam
-        semper magna sit amet augue pretium molestie. Quisque ullamcorper turpis
-        a nisi consectetur, vel consectetur purus lobortis. Pellentesque
-        tristique justo id faucibus rutrum. Donec mi lacus, molestie et posuere
-        eget, lacinia sed turpis. Aenean id sem ligula. Cras venenatis commodo
-        felis a tempor. Duis nec leo facilisis, condimentum odio dictum, rutrum
-        lectus. Nullam vehicula elementum imperdiet.
+        Since i completed my higschool diploma i have always wanted to double in software development
+        but due to lack of mentorship and guidance i found myself in a four year degree course in Economics but Now that i 
+        am almost done i said why not? Atleast ill say i tried. I am fascinated by the idea of creating things and having them 
+        come to life and impact the world in whichever way and Software Development Can help me realise that dream!
+        
       </p>
     </div>
     <div class="column">
+      <h3>Interests and Skills</h3>
       <p>
-        Nullam sit amet ante porttitor, vestibulum quam nec, tincidunt sem.
-        Nulla ac diam in risus porta sollicitudin. Nam pellentesque diam nec
-        arcu vehicula varius. Praesent id ornare magna. Aliquam congue nisl
-        enim, id vulputate lacus faucibus non. Sed ac dignissim dui, quis
-        porttitor augue. Donec velit erat, hendrerit ut tincidunt vel, placerat
-        sit amet risus.
+        <ul>
+          <li>Gaming</li>
+          <li>Studying The Cryptocurrency markets and speculating on the Price</li>
+          <li>A Good Movie! </li>
+          <li>I double in rapping from time to time.</li>
+        </ul>
       </p>
     </div>
   </body>
