--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
        <ul class="nav_links">
          <li><a href="/index.html">Home</a></li>
          <li>Projects</li>
-         <li>About</li>
+         <li><a href="#section-1">About</a></li>
        </ul>
      </nav>
      <a class="cta" href="mailto:ekagwima745@gmail.com"><button>Contact</button></button></a>
@@ -32,7 +32,7 @@
   </ul>
     </div>
     <div class="column">
-      <h1>About Me</h1>
+      <h1 id="section-1">About Me</h1>
       <p>
         Eston Kagwima is a Software Developer in The making who is a full time student 
         at Moringa School. I am also a fourth year student at Kenyatta University
