--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <header>
      <nav>
        <ul class="nav_links">
-         <li><a href="/index.html">Home</a></li>
+         <li>Home</a></li>
          <li>Projects</li>
          <li><a href="#section-1">About</a></li>
        </ul>
