--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
          <li>Home</a></li>
          <li>Projects</li>
          <li><a href="#section-1">About</a></li>
+         <li><a class="cta" href="mailto:ekagwima745@gmail.com"><button>Contact</button></button></a></li>
        </ul>
      </nav>
-     <a class="cta" href="mailto:ekagwima745@gmail.com"><button>Contact</button></button></a>
+     
    </header>
    <div class="text-center">
     <img src="images/my-photo.jpg" alt="This is me">
