correct spelling mistake

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="column">
       <h3>Why i took up programming</h3>
       <p>
-        Since i completed my higschool diploma i have always wanted to double in software development
+        Since i completed my higschool diploma i have always wanted to pursue software development
         but due to lack of mentorship and guidance i found myself in a four year degree course in Economics but Now that i 
         am almost done i said why not? Atleast ill say i tried. I am fascinated by the idea of creating things and having them 
         come to life and impact the world in whichever way and Software Development Can help me realise that dream!
