add float to text-center

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     <div class="row-1">
       <ul>
         <li>My first Website</li>
-        <p>This is a first website i created during my first week of prep at <a href="http://moringaschool.com/">Moringa School</a>. It is a simple website <a href="https://kagus-code.github.io/my-first-website-/">Check it out</a>
+        <p>This is a first website i created during my first week of prep at <a href="http://moringaschool.com/">Moringa School</a>. 
+          It is a simple website <a href="https://kagus-code.github.io/my-first-website-/">Check it out</a>
   </ul>
     </div>
     <div class="column">
@@ -57,7 +58,7 @@
           <li>Gaming</li>
           <li>Studying The Cryptocurrency markets and speculating on the Price</li>
           <li>A Good Movie! </li>
-          <li>I double in rapping from time to time.</li>
+          <li>I dabble in rapping from time to time.</li>
         </ul>
       </p>
     </div>
