change background color

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="row-1">
       <ul>
         <li>My first Website</li>
-        <p>This is a first website i created during my first week of prep at <a href="http://moringaschool.com/">Moringa School</a>. 
+        <p>This is the first website i created during my first week of prep at <a href="http://moringaschool.com/">Moringa School</a>. 
           It is a simple website <a href="https://kagus-code.github.io/my-first-website-/">Check it out</a>
   </ul>
     </div>
