--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <img src="images/my-photo.jpg" alt="This is me">
     <h1>Eston Kagwima</h1>
     <h3>Moringa prep Student</h3>
-    <h5>Web Developer</h5>
+    <h5>Software Developer</h5>
     </div>
     <h2>My Projects</h2>
     <div class="row-1">
