adding hover to buttons

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
    <header>
      <nav>
        <ul class="nav_links">
-         <li><button>Home</button></button></a></li>
-         <li><button>My projects</button></button></li>
+         <li>Home</a></li>
+         <li>Projects</li>
          <li><a href="#section-1"><button>About</button></button></a></li>
          <li><a class="cta" href="mailto:ekagwima745@gmail.com"><button>Contact</button></button></a></li>
        </ul>
