--- a/index.html
+++ b/index.html
@@ -5,61 +5,123 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eston Kagwima's GitHub Projects</title>
+    <link
+      rel="stylesheet"
+      href="css/bootstrap.css"
+      type="text/css"
+      media="all"
+    />
     <link rel="stylesheet" href="css/styles.css" type="text/css" />
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.js"
+      integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
-   <header>
-     <nav>
-       <ul class="nav_links">
-         <li>Home</a></li>
-         <li>Projects</li>
-         <li><a href="#section-1"><button>About</button></button></a></li>
-         <li><a class="cta" href="mailto:ekagwima745@gmail.com"><button>Contact</button></button></a></li>
+    <!---Navigation -->
+   <nav class="navbar">
+     <div class="max-width">
+       <div class="logo">
+         <a href="#">
+           Kagus <span>Code</span>
+         </a>
+       </div>
+
+       <ul class="menu">
+         <li><a href="#">Home</a></li>
+         <li><a href="#">About</a></li>
+         <li><a href="#">Services</a></li>
+         <li><a href="#">Skills</a></li>
+         <li><a href="#">Team</a></li>
+         <li><a href="#">Contact</a></li>
        </ul>
-     </nav>
-   </header>
-   <div class="text-center">
-    <img src="images/my-photo.jpg" alt="This is me">
-    <h1>Eston Kagwima</h1>
-    <h3>Moringa prep Student</h3>
-    <h5>Software Developer</h5>
-    </div>
-    <h2>My Projects</h2>
-    <div class="row-1">
-      <ul>
-        <li>My first Website</li>
-        <p>This is the first website i created during my first week of prep at <a href="http://moringaschool.com/">Moringa School</a>. 
-          It is a simple website <a href="https://kagus-code.github.io/my-first-website-/">Check it out</a>
-      </ul>
-    </div>
-    <div class="column">
-      <h1 id="section-1">About Me</h1>
-      <p>
-        Eston Kagwima is a Software Developer in The making who is a full time student 
-        at Moringa School. I am also a fourth year student at Kenyatta University
-        awaiting graduation. I am fascinated by the block-chain technolgy and think that it holds 
-        great promise in solving problems in developing countries like Kenya 
-      </p>
-    </div>
-    <div class="column">
-      <h3>Why i took up programming</h3>
-      <p>
-        Since i completed my higschool diploma i have always wanted to pursue software development
-        but due to lack of mentorship and guidance i found myself in a four year degree course in Economics but Now that i 
-        am almost done i said why not? Atleast ill say i tried. I am fascinated by the idea of creating things and having them 
-        come to life and impact the world in whichever way and Software Development Can help me realise that dream!
-      </p>
-    </div>
-    <div class="column">
-      <h3>Interests and Skills</h3>
-      <p>
-        <ul>
-          <li>Gaming</li>
-          <li>Studying The Cryptocurrency markets and speculating on the Price</li>
-          <li>A Good Movie! </li>
-          <li>I dabble in rapping from time to time.</li>
-        </ul>
-      </p>
-    </div>
+     </div>
+   </nav>
+
+    <!-- liquid image section -->
+    <!-- <div class="landing">
+      <div class="intro">
+        <h2>Blending your image</h2>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur
+          obcaecati dolorem quo magnam laborum iure ex, rerum voluptatum neque
+          nisi impedit et distinctio, adipisci enim error saepe ullam, eum
+          facere.
+        </p>
+      </div>
+      <div class="distortion">
+
+      </div>
+    </div> -->
+
+    <!-- <main>
+      <section class="glass">
+        <div class="dashboard">
+          <div class="user">
+            <img
+              src="/images/my-photo.jpg"
+              alt="avatar"
+              style="max-width: 250px; max-height: 250px; border-radius: 50%"
+            />
+            <h3>Eston Kagwima</h3>
+            <p>Software Developer</p>
+          </div>
+        </div>
+
+        <div class="games">
+          <div class="status">
+            <h3>About me</h3>
+          </div>
+          <div class="cards">
+            <div class="card">
+              <div class="card-info">
+                <h4>who is Eston</h4>
+              </div>
+
+              <p>
+                Eston Kagwima is a Software Developer in The making who is a
+                full time student at Moringa School. I am also a fourth year
+                student at Kenyatta University awaiting graduation. I am
+                fascinated by the block-chain technolgy and think that it holds
+                great promise in solving problems in developing countries like
+                Kenya
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <div class="circle1"></div>
+    <div class="circle2"></div>
+
+    <div class="curved developed-by">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 310">
+        <path
+          fill="#fff"
+          fill-opacity="1"
+          d="M0,192L48,197.3C96,203,192,213,288,229.3C384,245,480,267,576,250.7C672,235,768,181,864,181.3C960,181,1056,235,1152,234.7C1248,235,1344,181,1392,154.7L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
+        ></path>
+      </svg>
+    </div> -->
+
+
+
+   
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js" integrity="sha512-DkPsH9LzNzZaZjCszwKrooKwgjArJDiEjA5tTgr3YX4E6TYv93ICS8T41yFHJnnSmGpnf0Mvb5NhScYbwvhn2w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/106/three.min.js" integrity="sha512-aqhdrigR8ePLi7IhiGrZz4APv1VktO5eCavRmavrNSk1Ut/s/WVlDwH94SeCqAiM0lm/s8mjtjaDhfevv2Zauw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="./js/hover.js"></script>
+    <script src="./js/app.js"></script>
   </body>
 </html>
