styling the home section

--- a/index.html
+++ b/index.html
@@ -50,6 +50,22 @@
      </div>
    </nav>
 
+
+   <!-- landing section -->
+
+   <section class="home" id="home">
+     <div class="max-width">
+       <div class="home-content">
+         <div class="text-1"> Hello, my name is  </div>
+         <div class="text-2"> Eston Kagwima </div>
+         <div class="text-3"> And I'm a  <span>Software Developer</span> </div>
+       </div>
+     </div>
+     <div class="distortion">
+
+    </div>
+   </section>
+
     <!-- liquid image section -->
     <!-- <div class="landing">
       <div class="intro">
