adding divider to project

--- a/index.html
+++ b/index.html
@@ -32,12 +32,13 @@
   <body>
     <!---Navigation -->
    <nav class="navbar">
+    <div class="logo">
+      <a href="#">
+        Kagus <span>Code</span>
+      </a>
+    </div>
      <div class="max-width">
-       <div class="logo">
-         <a href="#">
-           Kagus <span>Code</span>
-         </a>
-       </div>
+  
 
        <ul class="menu">
          <li><a href="#">Home</a></li>
@@ -61,10 +62,66 @@
          <div class="text-3"> And I'm a  <span>Software Developer</span> </div>
        </div>
      </div>
-     <div class="distortion">
+
+
+     <div class="card distortion" style="-webkit-border-radius: 50px;
+     -moz-border-radius: 50px;
+     border-radius: 50px;">
+
+     
+      <div class="">
+
+     
+      </div>
+
+
+    </div>
+
+
+
+
+
+
 
     </div>
    </section>
+   <svg id="wave" style="transform:rotate(0deg); transition: 0.3s" viewBox="0 0 1440 120" version="1.1" xmlns="http://www.w3.org/2000/svg"><defs><linearGradient id="sw-gradient-0" x1="0" x2="0" y1="1" y2="0"><stop stop-color="rgba(245, 245, 245, 1)" offset="0%"></stop><stop stop-color="rgba(123.373, 117.409, 117.409, 1)" offset="100%"></stop></linearGradient></defs><path style="transform:translate(0, 0px); opacity:1" fill="url(#sw-gradient-0)" d="M0,60L48,66C96,72,192,84,288,76C384,68,480,40,576,36C672,32,768,52,864,60C960,68,1056,64,1152,64C1248,64,1344,68,1440,76C1536,84,1632,96,1728,96C1824,96,1920,84,2016,84C2112,84,2208,96,2304,92C2400,88,2496,68,2592,62C2688,56,2784,64,2880,60C2976,56,3072,40,3168,32C3264,24,3360,24,3456,26C3552,28,3648,32,3744,40C3840,48,3936,60,4032,68C4128,76,4224,80,4320,68C4416,56,4512,28,4608,28C4704,28,4800,56,4896,62C4992,68,5088,52,5184,48C5280,44,5376,52,5472,62C5568,72,5664,84,5760,84C5856,84,5952,72,6048,70C6144,68,6240,76,6336,74C6432,72,6528,60,6624,62C6720,64,6816,80,6864,88L6912,96L6912,120L6864,120C6816,120,6720,120,6624,120C6528,120,6432,120,6336,120C6240,120,6144,120,6048,120C5952,120,5856,120,5760,120C5664,120,5568,120,5472,120C5376,120,5280,120,5184,120C5088,120,4992,120,4896,120C4800,120,4704,120,4608,120C4512,120,4416,120,4320,120C4224,120,4128,120,4032,120C3936,120,3840,120,3744,120C3648,120,3552,120,3456,120C3360,120,3264,120,3168,120C3072,120,2976,120,2880,120C2784,120,2688,120,2592,120C2496,120,2400,120,2304,120C2208,120,2112,120,2016,120C1920,120,1824,120,1728,120C1632,120,1536,120,1440,120C1344,120,1248,120,1152,120C1056,120,960,120,864,120C768,120,672,120,576,120C480,120,384,120,288,120C192,120,96,120,48,120L0,120Z"></path></svg>
+
+
+
+   
+   <section class="me-card">
+   <div class="blog-slider">
+    <div class="blog-slider__wrp swiper-wrapper">
+  
+      <div class="blog-slider__item swiper-slide">
+        <div class="blog-slider__img">
+          <img src="/About-me.jpg" alt="">
+        </div>
+        <div class="blog-slider__content">
+          <span class="blog-slider__code" style="font-size: large;"><h1> About me..</h1>  </span>
+          <div class="blog-slider__title"></div>
+          <div class="blog-slider__text" style="font-size: 17px;">
+            I am a Full stack Software Developer who is passionate about tech and the solutions it has to offer in the modern world.I am also a graduate from Kenyatta University 
+            with a Bachelor's Degree in Economics.I am open and eager to learn about new stuff 
+            hence the initiative to take a full stack developer course at Moringa school which i successfully completed 
+            in july of 2021. </div>
+          <a href="#" class="blog-slider__button">READ MORE</a>
+        </div>
+      </div>
+
+    </div>
+    <div class="blog-slider__pagination"></div>
+  </div>
+
+
+</section>
+
+
+
+
+
+
 
     <!-- liquid image section -->
     <!-- <div class="landing">
@@ -121,16 +178,10 @@
     </main>
     <div class="circle1"></div>
     <div class="circle2"></div>
-
+-->
     <div class="curved developed-by">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 310">
-        <path
-          fill="#fff"
-          fill-opacity="1"
-          d="M0,192L48,197.3C96,203,192,213,288,229.3C384,245,480,267,576,250.7C672,235,768,181,864,181.3C960,181,1056,235,1152,234.7C1248,235,1344,181,1392,154.7L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
-        ></path>
-      </svg>
-    </div> -->
+      <svg id="wave" style="transform:rotate(0deg); transition: 0.3s" viewBox="0 0 1440 490" version="1.1" xmlns="http://www.w3.org/2000/svg"><defs><linearGradient id="sw-gradient-0" x1="0" x2="0" y1="1" y2="0"><stop stop-color="rgba(255, 229, 59, 1)" offset="0%"></stop><stop stop-color="rgba(253, 56, 56, 1)" offset="100%"></stop></linearGradient></defs><path style="transform:translate(0, 0px); opacity:1" fill="url(#sw-gradient-0)" d="M0,49L120,114.3C240,180,480,310,720,367.5C960,425,1200,408,1440,400.2C1680,392,1920,392,2160,383.8C2400,376,2640,359,2880,351.2C3120,343,3360,343,3600,351.2C3840,359,4080,376,4320,318.5C4560,261,4800,131,5040,114.3C5280,98,5520,196,5760,228.7C6000,261,6240,229,6480,196C6720,163,6960,131,7200,163.3C7440,196,7680,294,7920,294C8160,294,8400,196,8640,138.8C8880,82,9120,65,9360,122.5C9600,180,9840,310,10080,351.2C10320,392,10560,343,10800,269.5C11040,196,11280,98,11520,122.5C11760,147,12000,294,12240,367.5C12480,441,12720,441,12960,400.2C13200,359,13440,278,13680,261.3C13920,245,14160,294,14400,285.8C14640,278,14880,212,15120,187.8C15360,163,15600,180,15840,228.7C16080,278,16320,359,16560,359.3C16800,359,17040,278,17160,236.8L17280,196L17280,490L17160,490C17040,490,16800,490,16560,490C16320,490,16080,490,15840,490C15600,490,15360,490,15120,490C14880,490,14640,490,14400,490C14160,490,13920,490,13680,490C13440,490,13200,490,12960,490C12720,490,12480,490,12240,490C12000,490,11760,490,11520,490C11280,490,11040,490,10800,490C10560,490,10320,490,10080,490C9840,490,9600,490,9360,490C9120,490,8880,490,8640,490C8400,490,8160,490,7920,490C7680,490,7440,490,7200,490C6960,490,6720,490,6480,490C6240,490,6000,490,5760,490C5520,490,5280,490,5040,490C4800,490,4560,490,4320,490C4080,490,3840,490,3600,490C3360,490,3120,490,2880,490C2640,490,2400,490,2160,490C1920,490,1680,490,1440,490C1200,490,960,490,720,490C480,490,240,490,120,490L0,490Z"></path></svg>
+    </div> 
 
 
 
