adding readmore button toggle

--- a/index.html
+++ b/index.html
@@ -62,30 +62,15 @@
        <div class="home-content">
          <div class="text-1"> Hello, my name is  </div>
          <div class="text-2"> Eston Kagwima </div>
-         <div class="text-3"> And I'm a  <span>Software Developer</span> </div>
+         <div class="text-3"> And I'm a  <span>Full stack Software Developer</span> </div>
        </div>
      </div>
-
-
      <div class="card distortion" style="-webkit-border-radius: 50px;
      -moz-border-radius: 50px;
      border-radius: 50px;">
-
-     
       <div class="">
-
-     
       </div>
-
-
     </div>
-
-
-
-
-
-
-
     </div>
    </section>
    <svg id="wave" style="transform:rotate(0deg); transition: 0.3s" viewBox="0 0 1440 120" version="1.1" xmlns="http://www.w3.org/2000/svg"><defs><linearGradient id="sw-gradient-0" x1="0" x2="0" y1="1" y2="0"><stop stop-color="rgba(245, 245, 245, 1)" offset="0%"></stop><stop stop-color="rgba(123.373, 117.409, 117.409, 1)" offset="100%"></stop></linearGradient></defs><path style="transform:translate(0, 0px); opacity:1" fill="url(#sw-gradient-0)" d="M0,60L48,66C96,72,192,84,288,76C384,68,480,40,576,36C672,32,768,52,864,60C960,68,1056,64,1152,64C1248,64,1344,68,1440,76C1536,84,1632,96,1728,96C1824,96,1920,84,2016,84C2112,84,2208,96,2304,92C2400,88,2496,68,2592,62C2688,56,2784,64,2880,60C2976,56,3072,40,3168,32C3264,24,3360,24,3456,26C3552,28,3648,32,3744,40C3840,48,3936,60,4032,68C4128,76,4224,80,4320,68C4416,56,4512,28,4608,28C4704,28,4800,56,4896,62C4992,68,5088,52,5184,48C5280,44,5376,52,5472,62C5568,72,5664,84,5760,84C5856,84,5952,72,6048,70C6144,68,6240,76,6336,74C6432,72,6528,60,6624,62C6720,64,6816,80,6864,88L6912,96L6912,120L6864,120C6816,120,6720,120,6624,120C6528,120,6432,120,6336,120C6240,120,6144,120,6048,120C5952,120,5856,120,5760,120C5664,120,5568,120,5472,120C5376,120,5280,120,5184,120C5088,120,4992,120,4896,120C4800,120,4704,120,4608,120C4512,120,4416,120,4320,120C4224,120,4128,120,4032,120C3936,120,3840,120,3744,120C3648,120,3552,120,3456,120C3360,120,3264,120,3168,120C3072,120,2976,120,2880,120C2784,120,2688,120,2592,120C2496,120,2400,120,2304,120C2208,120,2112,120,2016,120C1920,120,1824,120,1728,120C1632,120,1536,120,1440,120C1344,120,1248,120,1152,120C1056,120,960,120,864,120C768,120,672,120,576,120C480,120,384,120,288,120C192,120,96,120,48,120L0,120Z"></path></svg>
@@ -105,19 +90,21 @@
           <span class="blog-slider__code" style="font-size: large;"><h1> About me..</h1>  </span>
           <div class="blog-slider__title"></div>
           <div class="blog-slider__text" style="font-size: 17px;">
-            I am a Full stack Software Developer who is passionate about tech and the solutions it has to offer in the modern world.I am also a graduate from Kenyatta University 
-            with a Bachelor's Degree in Economics.I am open and eager to learn about new stuff 
-            hence the initiative to take a full stack developer course at Moringa school which i successfully completed 
-            in july of 2021. </div>
-          <a href="#" class="blog-slider__button">READ MORE</a>
-        </div>
+            I am a Full stack Software Developer who is passionate about tech and the solutions it has to offer in the modern world.I am also a graduate from<a href="http://www.ku.ac.ke/">Kenyatta University</a>  
+            with a Bachelor's Degree in Economics.
+            <br> <br>
+            <p id="readmore">
+            I am open learning about new stuff hence the initiative to take a 
+            full stack developer course at <a href="https://moringaschool.com/">Moringa school</a> 
+            which i successfully completed 
+            in july of 2021.</p></div>
+            <br>
+          <a id="more-btn" class="blog-slider__button"   style=" text-decoration: none;">READ MORE</a>
+                  </div>
       </div>
-
     </div>
     <div class="blog-slider__pagination"></div>
   </div>
-
-
 </section>
 
 
