--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 
        <ul class="menu">
          <li><a href="#">Home</a></li>
-         <li><a href="#">About</a></li>
+         <li><a href="#about">About</a></li>
          <li><a href="#">Services</a></li>
-         <li><a href="#">Skills</a></li>
+         <li><a href="#skills">Skills</a></li>
          <li><a href="#">Team</a></li>
-         <li><a href="#">Contact</a></li>
+         <li><a href="mailto:ekagwima745@gmail.com">Contact</a></li>
        </ul>
        <div class="menu-btn">
          <i class="fas fa-bars"></i>
@@ -68,8 +68,6 @@
      <div class="card distortion" style="-webkit-border-radius: 50px;
      -moz-border-radius: 50px;
      border-radius: 50px;">
-      <div class="">
-      </div>
     </div>
     </div>
    </section>
@@ -78,7 +76,7 @@
 
 
    
-   <section class="me-card">
+   <section class="me-card"  id="about">
    <div class="blog-slider">
     <div class="blog-slider__wrp swiper-wrapper">
   
@@ -90,7 +88,7 @@
           <span class="blog-slider__code" style="font-size: large;"><h1> About me..</h1>  </span>
           <div class="blog-slider__title"></div>
           <div class="blog-slider__text" style="font-size: 17px;">
-            I am a Full stack Software Developer who is passionate about tech and the solutions it has to offer in the modern world.I am also a graduate from<a href="http://www.ku.ac.ke/">Kenyatta University</a>  
+            I am a Full stack Software Developer who is passionate about tech and the solutions it has to offer in the modern world.I am also a graduate from <a href="http://www.ku.ac.ke/">Kenyatta University</a>  
             with a Bachelor's Degree in Economics.
             <br> <br>
             <p id="readmore">
@@ -106,79 +104,72 @@
     <div class="blog-slider__pagination"></div>
   </div>
 </section>
+<svg id="wave" style="transform:rotate(180deg); transition: 0.3s" viewBox="0 0 1440 100" version="1.1" xmlns="http://www.w3.org/2000/svg"><defs><linearGradient id="sw-gradient-0" x1="0" x2="0" y1="1" y2="0"><stop stop-color="rgba(253, 93.12, 56, 1)" offset="0%"></stop><stop stop-color="rgba(255, 179, 11, 1)" offset="100%"></stop></linearGradient></defs><path style="transform:translate(0, 0px); opacity:1" fill="url(#sw-gradient-0)" d="M0,50L24,51.7C48,53,96,57,144,53.3C192,50,240,40,288,43.3C336,47,384,63,432,68.3C480,73,528,67,576,68.3C624,70,672,80,720,78.3C768,77,816,63,864,61.7C912,60,960,70,1008,73.3C1056,77,1104,73,1152,60C1200,47,1248,23,1296,16.7C1344,10,1392,20,1440,26.7C1488,33,1536,37,1584,33.3C1632,30,1680,20,1728,15C1776,10,1824,10,1872,21.7C1920,33,1968,57,2016,66.7C2064,77,2112,73,2160,60C2208,47,2256,23,2304,26.7C2352,30,2400,60,2448,75C2496,90,2544,90,2592,78.3C2640,67,2688,43,2736,41.7C2784,40,2832,60,2880,56.7C2928,53,2976,27,3024,20C3072,13,3120,27,3168,31.7C3216,37,3264,33,3312,38.3C3360,43,3408,57,3432,63.3L3456,70L3456,100L3432,100C3408,100,3360,100,3312,100C3264,100,3216,100,3168,100C3120,100,3072,100,3024,100C2976,100,2928,100,2880,100C2832,100,2784,100,2736,100C2688,100,2640,100,2592,100C2544,100,2496,100,2448,100C2400,100,2352,100,2304,100C2256,100,2208,100,2160,100C2112,100,2064,100,2016,100C1968,100,1920,100,1872,100C1824,100,1776,100,1728,100C1680,100,1632,100,1584,100C1536,100,1488,100,1440,100C1392,100,1344,100,1296,100C1248,100,1200,100,1152,100C1104,100,1056,100,1008,100C960,100,912,100,864,100C816,100,768,100,720,100C672,100,624,100,576,100C528,100,480,100,432,100C384,100,336,100,288,100C240,100,192,100,144,100C96,100,48,100,24,100L0,100Z"></path><defs><linearGradient id="sw-gradient-1" x1="0" x2="0" y1="1" y2="0"><stop stop-color="rgba(243, 106, 62, 1)" offset="0%"></stop><stop stop-color="rgba(255, 179, 11, 1)" offset="100%"></stop></linearGradient></defs><path style="transform:translate(0, 50px); opacity:0.9" fill="url(#sw-gradient-1)" d="M0,0L24,6.7C48,13,96,27,144,30C192,33,240,27,288,30C336,33,384,47,432,43.3C480,40,528,20,576,20C624,20,672,40,720,51.7C768,63,816,67,864,58.3C912,50,960,30,1008,18.3C1056,7,1104,3,1152,13.3C1200,23,1248,47,1296,51.7C1344,57,1392,43,1440,38.3C1488,33,1536,37,1584,45C1632,53,1680,67,1728,70C1776,73,1824,67,1872,68.3C1920,70,1968,80,2016,83.3C2064,87,2112,83,2160,78.3C2208,73,2256,67,2304,55C2352,43,2400,27,2448,16.7C2496,7,2544,3,2592,13.3C2640,23,2688,47,2736,46.7C2784,47,2832,23,2880,23.3C2928,23,2976,47,3024,50C3072,53,3120,37,3168,31.7C3216,27,3264,33,3312,31.7C3360,30,3408,20,3432,15L3456,10L3456,100L3432,100C3408,100,3360,100,3312,100C3264,100,3216,100,3168,100C3120,100,3072,100,3024,100C2976,100,2928,100,2880,100C2832,100,2784,100,2736,100C2688,100,2640,100,2592,100C2544,100,2496,100,2448,100C2400,100,2352,100,2304,100C2256,100,2208,100,2160,100C2112,100,2064,100,2016,100C1968,100,1920,100,1872,100C1824,100,1776,100,1728,100C1680,100,1632,100,1584,100C1536,100,1488,100,1440,100C1392,100,1344,100,1296,100C1248,100,1200,100,1152,100C1104,100,1056,100,1008,100C960,100,912,100,864,100C816,100,768,100,720,100C672,100,624,100,576,100C528,100,480,100,432,100C384,100,336,100,288,100C240,100,192,100,144,100C96,100,48,100,24,100L0,100Z"></path><defs><linearGradient id="sw-gradient-2" x1="0" x2="0" y1="1" y2="0"><stop stop-color="rgba(243, 106, 62, 1)" offset="0%"></stop><stop stop-color="rgba(255, 179, 11, 1)" offset="100%"></stop></linearGradient></defs><path style="transform:translate(0, 100px); opacity:0.8" fill="url(#sw-gradient-2)" d="M0,40L24,45C48,50,96,60,144,56.7C192,53,240,37,288,26.7C336,17,384,13,432,13.3C480,13,528,17,576,15C624,13,672,7,720,13.3C768,20,816,40,864,51.7C912,63,960,67,1008,60C1056,53,1104,37,1152,40C1200,43,1248,67,1296,65C1344,63,1392,37,1440,25C1488,13,1536,17,1584,23.3C1632,30,1680,40,1728,46.7C1776,53,1824,57,1872,53.3C1920,50,1968,40,2016,36.7C2064,33,2112,37,2160,36.7C2208,37,2256,33,2304,35C2352,37,2400,43,2448,40C2496,37,2544,23,2592,30C2640,37,2688,63,2736,63.3C2784,63,2832,37,2880,36.7C2928,37,2976,63,3024,75C3072,87,3120,83,3168,83.3C3216,83,3264,87,3312,86.7C3360,87,3408,83,3432,81.7L3456,80L3456,100L3432,100C3408,100,3360,100,3312,100C3264,100,3216,100,3168,100C3120,100,3072,100,3024,100C2976,100,2928,100,2880,100C2832,100,2784,100,2736,100C2688,100,2640,100,2592,100C2544,100,2496,100,2448,100C2400,100,2352,100,2304,100C2256,100,2208,100,2160,100C2112,100,2064,100,2016,100C1968,100,1920,100,1872,100C1824,100,1776,100,1728,100C1680,100,1632,100,1584,100C1536,100,1488,100,1440,100C1392,100,1344,100,1296,100C1248,100,1200,100,1152,100C1104,100,1056,100,1008,100C960,100,912,100,864,100C816,100,768,100,720,100C672,100,624,100,576,100C528,100,480,100,432,100C384,100,336,100,288,100C240,100,192,100,144,100C96,100,48,100,24,100L0,100Z"></path></svg>
 
 
 
 
 
+<section id="skills">
+<div class="container-fluid">
+  <div class="row">
 
 
-    <!-- liquid image section -->
-    <!-- <div class="landing">
-      <div class="intro">
-        <h2>Blending your image</h2>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur
-          obcaecati dolorem quo magnam laborum iure ex, rerum voluptatum neque
-          nisi impedit et distinctio, adipisci enim error saepe ullam, eum
-          facere.
-        </p>
-      </div>
-      <div class="distortion">
 
-      </div>
-    </div> -->
-
-    <!-- <main>
-      <section class="glass">
-        <div class="dashboard">
-          <div class="user">
-            <img
-              src="/images/my-photo.jpg"
-              alt="avatar"
-              style="max-width: 250px; max-height: 250px; border-radius: 50%"
-            />
-            <h3>Eston Kagwima</h3>
-            <p>Software Developer</p>
-          </div>
+    <div class="col-md-6">
+      <h1>Skills</h1>
+      <i class="fas fa-tools fa-5x"></i>
         </div>
 
-        <div class="games">
-          <div class="status">
-            <h3>About me</h3>
-          </div>
-          <div class="cards">
-            <div class="card">
-              <div class="card-info">
-                <h4>who is Eston</h4>
-              </div>
 
-              <p>
-                Eston Kagwima is a Software Developer in The making who is a
-                full time student at Moringa School. I am also a fourth year
-                student at Kenyatta University awaiting graduation. I am
-                fascinated by the block-chain technolgy and think that it holds
-                great promise in solving problems in developing countries like
-                Kenya
-              </p>
-            </div>
-          </div>
+
+
+    <div class="col-md-6">
+        <div class="row">
+          <div class="col-md-2">  <div class="demo" data-percent="90"></div>
+          <h3> <i class="fab fa-html5 fa-2x"></i> HTML</h3></div>
+          <div class="col-md-2"> <div class="demo5" data-percent="70"></div>
+          <h3><i class="fas fa-code fa-2x"></i> JQUERY</h3></div>
+          <div class="col-md-2"><div class="demo1" data-percent="80"></div>
+          <h3><i class="fab fa-css3-alt fa-2x"></i> CSS</h3></div>
         </div>
-      </section>
-    </main>
-    <div class="circle1"></div>
-    <div class="circle2"></div>
--->
+        <div class="row">
+          <div class="col-md-2"><div class="demo2" data-percent="65"></div>
+          <h3> <i class="fab fa-js fa-2x"></i> JAVASCRIPT</h3></div>
+          <div class="col-md-2"><div class="demo3" data-percent="70"></div>
+          <h3> <i class="fab fa-bootstrap fa-2x"></i> BOOTSTRAP</h3></div>
+          <div class="col-md-2">
+            <div class="demo4" data-percent="70"></div>
+            <h3 ><i class="fab fa-python fa-2x"></i>  PYTHON</h3>
+          </div>
+        </div> 
+        </div>
+   
+  </div>
+</div>
+</section>
+
+
+
+
     <div class="curved developed-by">
       <svg id="wave" style="transform:rotate(0deg); transition: 0.3s" viewBox="0 0 1440 490" version="1.1" xmlns="http://www.w3.org/2000/svg"><defs><linearGradient id="sw-gradient-0" x1="0" x2="0" y1="1" y2="0"><stop stop-color="rgba(255, 229, 59, 1)" offset="0%"></stop><stop stop-color="rgba(253, 56, 56, 1)" offset="100%"></stop></linearGradient></defs><path style="transform:translate(0, 0px); opacity:1" fill="url(#sw-gradient-0)" d="M0,49L120,114.3C240,180,480,310,720,367.5C960,425,1200,408,1440,400.2C1680,392,1920,392,2160,383.8C2400,376,2640,359,2880,351.2C3120,343,3360,343,3600,351.2C3840,359,4080,376,4320,318.5C4560,261,4800,131,5040,114.3C5280,98,5520,196,5760,228.7C6000,261,6240,229,6480,196C6720,163,6960,131,7200,163.3C7440,196,7680,294,7920,294C8160,294,8400,196,8640,138.8C8880,82,9120,65,9360,122.5C9600,180,9840,310,10080,351.2C10320,392,10560,343,10800,269.5C11040,196,11280,98,11520,122.5C11760,147,12000,294,12240,367.5C12480,441,12720,441,12960,400.2C13200,359,13440,278,13680,261.3C13920,245,14160,294,14400,285.8C14640,278,14880,212,15120,187.8C15360,163,15600,180,15840,228.7C16080,278,16320,359,16560,359.3C16800,359,17040,278,17160,236.8L17280,196L17280,490L17160,490C17040,490,16800,490,16560,490C16320,490,16080,490,15840,490C15600,490,15360,490,15120,490C14880,490,14640,490,14400,490C14160,490,13920,490,13680,490C13440,490,13200,490,12960,490C12720,490,12480,490,12240,490C12000,490,11760,490,11520,490C11280,490,11040,490,10800,490C10560,490,10320,490,10080,490C9840,490,9600,490,9360,490C9120,490,8880,490,8640,490C8400,490,8160,490,7920,490C7680,490,7440,490,7200,490C6960,490,6720,490,6480,490C6240,490,6000,490,5760,490C5520,490,5280,490,5040,490C4800,490,4560,490,4320,490C4080,490,3840,490,3600,490C3360,490,3120,490,2880,490C2640,490,2400,490,2160,490C1920,490,1680,490,1440,490C1200,490,960,490,720,490C480,490,240,490,120,490L0,490Z"></path></svg>
     </div> 
 
 
 
+
+
+
+
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/rainyday.js/0.1.2/rainyday.min.js"></script>
    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js" integrity="sha512-DkPsH9LzNzZaZjCszwKrooKwgjArJDiEjA5tTgr3YX4E6TYv93ICS8T41yFHJnnSmGpnf0Mvb5NhScYbwvhn2w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/106/three.min.js" integrity="sha512-aqhdrigR8ePLi7IhiGrZz4APv1VktO5eCavRmavrNSk1Ut/s/WVlDwH94SeCqAiM0lm/s8mjtjaDhfevv2Zauw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./js/hover.js"></script>
     <script src="./js/app.js"></script>
+    <script src="js/jquery.circlechart.js"></script>
   </body>
 </html>
