adding images to cloudinary

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
   
       <div class="blog-slider__item swiper-slide">
         <div class="blog-slider__img">
-          <img src="/About-me.jpg" alt="">
+          <img src="https://res.cloudinary.com/dcllyqc40/image/upload/v1624255498/About-me_uz3m6l.jpg" alt="">
         </div>
         <div class="blog-slider__content">
           <span class="blog-slider__code" style="font-size: large;"><h1> About me..</h1>  </span>
@@ -298,7 +298,7 @@
                     </div>
 
                     <div class="card-back">
-                      <img class="video__container" src="/Git search.png" alt="">
+                      <img class="video__container" src="https://res.cloudinary.com/dcllyqc40/image/upload/v1622388162/apvu41wciyiuhfgd8ttt.png" alt="">
   
                     </div>
                 </div>
@@ -344,7 +344,7 @@
                         </div>
                     </div>
                     <div class="card-back">
-                      <img class="video__container" src="/LightSave.png" alt="">
+                      <img class="video__container" src="https://res.cloudinary.com/dcllyqc40/image/upload/v1624255497/LightSave_ma0aph.png" alt="">
                     </div>
                 </div>
             </div>
@@ -409,7 +409,7 @@
                       </div>
                       <div class="card-back">
   
-                        <img class="video__container" src="/tuzo.png" alt="">
+                        <img class="video__container" src="https://res.cloudinary.com/dcllyqc40/image/upload/v1624255499/tuzo_rfcfjg.png" alt="">
                           <video  autoplay="" muted="" loop="">
     
                           </video>
@@ -458,7 +458,7 @@
                       </div>
                   </div>
                   <div class="card-back">
-                    <img class="video__container" src="/akan.png" alt="">
+                    <img class="video__container" src="https://res.cloudinary.com/dcllyqc40/image/upload/v1624255498/akan_kclmaa.png" alt="">
                   </div>
               </div>
           </div>
@@ -525,7 +525,7 @@
                     </div>
                     <div class="card-back">
 
-                      <img class="video__container" src="/gallery.png" alt="">
+                      <img class="video__container" src="https://res.cloudinary.com/dcllyqc40/image/upload/v1622368185/d1fsaxotwitpu8t1qk9u.png" alt="">
                         <video  autoplay="" muted="" loop="">
   
                         </video>
