--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
     <div class="vl"></div>
 
   <!-- Card: Camping -->
-  <!-- <section class="card-section">
+  <section class="card-section">
     <div class="card ce">
         <div class="flip-card">
             <div class="flip-card__container">
@@ -558,10 +558,10 @@
                     <div class="card-front__tp card-front__tp--flask">
                     
                                    <h2 class="card-front__heading">
-                                    Akan Name Web App
+                                    Pitch-Piper
                                    </h2>
                                    <p class="card-front__text-price">
-                                       Created using Html css and Js 
+                                       Created using Flask 
                                    </p>
                     </div>
 
@@ -572,7 +572,7 @@
                     </div>
                 </div>
                 <div class="card-back">
-                  <img class="video__container" src="/akan.png" alt="">
+                  <img class="video__container" src="https://res.cloudinary.com/dcllyqc40/image/upload/v1626374625/pitchpiper_az1ghe.png" alt="">
                 </div>
             </div>
         </div>
@@ -580,16 +580,18 @@
         <div class="inside-page">
             <div class="inside-page__container">
                 <h3 class="inside-page__heading inside-page__heading--flask">
-                  Akan Name Web App
+                  Pitch-Piper
                 </h3>
                 <p class="inside-page__text">
-                  This is a web app that will take your birthday and calculate the day of the week you were born and then depending on your gender it will show you your Akan name
+                  This application will allow you to use that one minute wisely. You can submit your one-minute pitches and other users will vote on them and leave comments to give their feedback on them.
+
+                  The pitches are organized by category. Namely (Product, Investment and Competition)
                 </p>
-                <a href="https://kagus-code.github.io/Akan-Names/" rel="noopener noreferrer" target="_blank" class="inside-page__btn inside-page__btn--flask">View Site</a>
+                <a href="https://pitchpiper.herokuapp.com/" rel="noopener noreferrer" target="_blank" class="inside-page__btn inside-page__btn--flask">View Site</a>
             </div>
         </div>
     </div>
-</section> -->
+</section>
 
 
 
