--- a/index.html
+++ b/index.html
@@ -603,11 +603,30 @@
 <div class="container-fluid" id="form">
 
   <h2 style="color: white;">Contact Me</h2>
+  
   <div class="row">
     <div class="col-md-4"></div>
     <div class="col-md-4">
 
 
+<h2 class="text-center"> 
+
+  <button type="button" class="btn btn-primary"><a href="https://wa.me/+254701655877">
+    click to me on whatsapp
+    <img src="https://img.icons8.com/color/48/000000/whatsapp--v1.png"/>
+  </a>
+  </button>
+</h2>
+
+
+
+
+
+
+
+
+
+<!-- 
       <form  data-aos="zoom-in">
         <div class="form-group">
         
@@ -626,7 +645,7 @@
         
         </div>
         <a href="#" class="btn btn1">Send</a>
-        </form>
+        </form> -->
 
 
     </div>
