--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
 <h2 class="text-center"> 
 
   <button type="button" class="btn btn-primary"><a href="https://wa.me/+254701655877">
-    click to me on whatsapp
+    click to reach me on whatsapp
     <img src="https://img.icons8.com/color/48/000000/whatsapp--v1.png"/>
   </a>
   </button>
