--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
 
 <h2 class="text-center"> 
 
-  <button type="button" class="btn btn-primary"><a href="https://wa.me/+254701655877">
+  <button type="button" class="btn btn-primary"><a style="text-decoration: none;" href="https://wa.me/+254701655877">
     click to reach me on whatsapp
     <img src="https://img.icons8.com/color/48/000000/whatsapp--v1.png"/>
   </a>
